[metadata]
name = wows-eval
version = attr: wows_eval.__version__
author = Maik Froebe
author_email = maik.froebe@uni-weimar.de
maintainer = Maik Froebe
description = Evaluation script for the wows-eval shared task.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/OpenWebSearch/wows-code/tree/main/ecir25/wows-eval
project_urls =
    Bug Tracker = https://github.com/OpenWebSearch/wows-code/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    tira>=0.0.154
    tirex-tracker>=0.2.8
    pyyaml
    pandas
    packaging
    trectools
    click
    tqdm

[options.extras_require]
test =
    pytest>=8.0,==8.*

[options.entry_points]
console_scripts =
    wows-eval = wows_eval:cli

[flake8]
max-line-length = 120
extend-ignore = E203
max-complexity = 10
