[project]
name = "ir-datasets-owi"
version = "0.1.0"
description = ""
authors = [
    {name = "Gijs Hendriksen",email = "info@gijshendriksen.nl"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ir-datasets (>=0.5.11,<0.6.0)",
    "duckdb (>=1.4.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ir_datasets_owi", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
